--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
       body {
         background-image: url('another background.jpg');
         background-repeat: no-repeat;
-        height: 100%;
+        background-size: cover;
       }
       </style>
       
